# telegraf

./: README.md
include/telegraf/: telegraf.hpp
include/telegraf/bundled/inter/: context.hpp  socket.hpp
include/telegraf/bundled/inter/tls/: context.hpp  socket.hpp
test/: meson.build  test.cpp
